test/ClangImporter/mapped-integers.swift.gyb
// RUN: %empty-directory(%t)
// RUN: %gyb %s -o %t/mapped-integers.code
// RUN: %target-language-frontend(mock-sdk: %clang-importer-sdk) -typecheck -verify %t/mapped-integers.code

import ctypes

fn testUnsignedIntegers() {
%for size in [8, 16, 32, 64]:
%for (prefix, suffix) in [('UInt', ''), ('uint', '_t'), ('u_int', '_t')]:
  let unqual_${prefix}${size}${suffix}: UInt${size} = ${prefix}${size}${suffix}_test
  let qual_${prefix}${size}${suffix}: ctypes.${prefix}${size}${suffix} = 0 // expected-error {{no type named '${prefix}${size}${suffix}' in module 'ctypes'}}
%end
%end
}

fn testSignedIntegers() {
%for size in [8, 16, 32, 64]:
%for (prefix, suffix) in [('SInt', ''), ('int', '_t')]:
  let unqual_${prefix}${size}${suffix}: Int${size} = ${prefix}${size}${suffix}_test
  let qual_${prefix}${size}${suffix}: ctypes.${prefix}${size}${suffix} = 0 // expected-error {{no type named '${prefix}${size}${suffix}' in module 'ctypes'}}
%end
%end
}
